# cmp-stack

./: .gitignore  README.txt  compile_library.sh  convert_to_hdf5.py  launch.sh  main.py  plt.py  stack_after_nmo_mute.py  temp.py  todo.txt
cmp_stack/: __init__.py  cmp_stack.py  generate_config.py  interpolate_missing_data.py  mute_gain.py  nmo.py  radon_transform.py  utilities.py
cmp_stack/cmp_c_library/: CMakeLists.txt  library.c  library.h
figure_scripts/: cmp_19_plots.py  mute_gain_nmo.py  plt_from_intermediate.py  stack_after_nmo_mute.py
input/: .gitignore  config.json  mute_t.txt  mute_x.txt  tau.txt  vnmo.txt
input/cmp_gathers/: README.txt
sphinx/: Makefile  conf.py
sphinx/_build/doctrees/: environment.pickle  index.doctree
sphinx/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/_build/html/_modules/: index.html
sphinx/_build/html/_modules/cmp_stack/: cmp_stack.html  mute_gain.html  nmo.html  radon_transform.html
sphinx/_build/html/_sources/: index.rst.txt
sphinx/_build/html/_static/: documentation_options.js
